Adequação do backend para poder fazer as chamadas na api da prroposicao
